# linkalong-pre-inteview-task

./: .dockerignore  .gitignore  Dockerfile  run.sh
backend/: README.md  poetry.toml  pyproject.toml
backend/linkalong/: main.py  settings.py
frontend/: .eslintrc.js  README.md  package.json
frontend/public/: index.html
frontend/src/: App.vue
