[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Python backend for Linkalong App"
authors = ["Denis Gaidukov <gaidukov.denis@gmail.>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.55.1"
aiofiles = "^0.5.0"
uvicorn = "^0.11.5"
python-decouple = "^3.3"
gensim = "^3.8"
jinja2 = "^2.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
